--- a/PyCharm/FinalProject1/Map.html
+++ b/PyCharm/FinalProject1/Map.html
@@ -12,6 +12,8 @@
     .navbar {
       margin-bottom: 0;
       border-radius: 0;
+      background-color: #1AB6D3;
+      color: white;
     }
 
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -20,7 +22,7 @@
     /* Set gray background color and 100% height */
     .sidenav {
       padding-top: 20px;
-      background-color: #f1f1f1;
+      background-color: #B4B0B6;
       height: 100%;
     }
 
@@ -74,6 +76,7 @@
       <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
+      <img src="images/wind.png" width="180">
     </div>
     <div class="col-sm-8 text-left">
       <h1>MAP</h1>
@@ -81,10 +84,9 @@
       <hr>
       <h3>yes</h3>
       <p>map</p>
-
-     <iframe src="https://createaclickablemap.com/map.php?&id=107256&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe>
-<script>if (window.addEventListener){ window.addEventListener("message", function(event) { if(event.data.length >= 22) { if( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } else if (window.attachEvent){ window.attachEvent("message", function(event) { if( event.data.length >= 22) { if ( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } </script>
-    </div>
+      <iframe src="https://createaclickablemap.com/map.php?&id=107410&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe>
+      <script>if (window.addEventListener){ window.addEventListener("message", function(event) { if(event.data.length >= 22) { if( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } else if (window.attachEvent){ window.attachEvent("message", function(event) { if( event.data.length >= 22) { if ( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } </script>
+        </div>
 
     <div class="col-sm-2 sidenav">
       <div class="well">
