--- a/PyCharm/FinalProject1/test1.html
+++ b/PyCharm/FinalProject1/test1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>NextBreath</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -12,6 +12,8 @@
     .navbar {
       margin-bottom: 0;
       border-radius: 0;
+      background-color: #1AB6D3;
+      color: white;
     }
 
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -20,8 +22,9 @@
     /* Set gray background color and 100% height */
     .sidenav {
       padding-top: 20px;
-      background-color: #f1f1f1;
+      background-color: #B4B0B6;
       height: 100%;
+
     }
 
     /* Set black background color, white text and some padding */
@@ -60,8 +63,7 @@
         <li><a href="#">Health Risks</a></li>
         <li><a href="#">Do your Part</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <ul class="nav navbar-nav navbar-right"
       </ul>
     </div>
   </div>
@@ -73,18 +75,22 @@
       <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
+      <img src="images/wind.png" width="180">
     </div>
     <div class="col-sm-8 text-left">
       <h1>Next Breath</h1>
-      <p>This is our home/about page =)</p>
+      <p>We are a site dedicated to procuring statistical data on air levels around the United States. As Time moves forward
+      We know people only have the best in mind for their family, so Why not provide them with a place to live with clean air!
+      Welcome to Next Breath!</p>
       <hr>
       <h3>About us</h3>
-      <p>explaining us</p>
+      <p>A non-profit organization that is dedicated to providing statistical data on air quality around the nation, providing
+      info for all 50 countries, We want nothing more than to provide the nation with clean air information</p>
     </div>
 
     <div class="col-sm-2 sidenav">
       <div class="well">
-        <p>ADS</p>
+      <img src="images/ad.gif"width="200">
       </div>
       <div class="well">
         <p>ADS</p>
