Added the State AQI
Yayy uss!

--- a/PyCharm/FinalProject1/healthRisks.html
+++ b/PyCharm/FinalProject1/healthRisks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>NextBreath</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -24,6 +24,7 @@
       padding-top: 20px;
       background-color: #B4B0B6;
       height: 100%;
+
     }
 
     /* Set black background color, white text and some padding */
@@ -63,12 +64,10 @@
         <li><a href="doYourPart.html">Do your Part</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
 </nav>
-
 
 <div class="container-fluid text-center">
   <div class="row content">
@@ -79,19 +78,15 @@
       <img src="images/wind.png" width="180">
     </div>
     <div class="col-sm-8 text-left">
-      <h1>MAP</h1>
-      <p>OUr Map</p>
+      <h1>Health Risks</h1>
       <hr>
-      <h3>How is My State Doing?</h3>
-      <p>Below is a graph that shows the average Air Quality Index by state. This graph sorts the states by the lower AQI. Here, you can see where your states lands compared to others.</p>
-      <iframe src="http://localhost:63342/FinalProject1/Graphs/graphs/stateAQI.html?_ijt=mk5jn9q4bebj4a78n0b5uhd1q4" width="700" height="700" align="center;"></iframe>
-      <iframe src="https://createaclickablemap.com/map.php?&id=107410&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe>
-      <script>if (window.addEventListener){ window.addEventListener("message", function(event) { if(event.data.length >= 22) { if( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } else if (window.attachEvent){ window.attachEvent("message", function(event) { if( event.data.length >= 22) { if ( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } </script>
-        </div>
+      <h3>Why Should I Care About Air Quality?</h3>
+      <p>Air quality is important...</p>
+    </div>
 
     <div class="col-sm-2 sidenav">
       <div class="well">
-        <p>ADS</p>
+      <img src="/images/ad.gif"width="200">
       </div>
       <div class="well">
         <p>ADS</p>
