--- a/PyCharm/FinalProject1/test1.html
+++ b/PyCharm/FinalProject1/test1.html
@@ -60,10 +60,10 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="test1.html">Home</a></li>
         <li><a href="Map.html">Map</a></li>
-        <li><a href="#">Health Risks</a></li>
-        <li><a href="#">Do your Part</a></li>
+        <li><a href="healthRisks.html">Health Risks</a></li>
+        <li><a href="doYourPart.html">Do your Part</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right"
+      <ul class="nav navbar-nav navbar-right">
       </ul>
     </div>
   </div>
@@ -93,7 +93,7 @@
       <img src="images/ad.gif"width="200">
       </div>
       <div class="well">
-        <p>ADS</p>
+        <img src="images/earth.gif"width="200">
       </div>
     </div>
   </div>
