--- a/PyCharm/FinalProject1/healthRisks.html
+++ b/PyCharm/FinalProject1/healthRisks.html
@@ -72,16 +72,15 @@
 <div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <img src="images/wind.png" width="180">
+      <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
+      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 150px; left: -10px;">
     </div>
     <div class="col-sm-8 text-left">
       <h1>Health Risks</h1>
       <hr>
       <h3>Why Should I Care About Air Quality?</h3>
-      <p>Air quality is important...</p>
+      <p>Air quality is important because bad air quality could lead to a irrattation of the eyes, nose and throat and
+      might even cause a shortness of breath</p>
     </div>
 
     <div class="col-sm-2 sidenav">
