--- a/PyCharm/FinalProject1/test1.html
+++ b/PyCharm/FinalProject1/test1.html
@@ -13,7 +13,6 @@
       margin-bottom: 0;
       border-radius: 0;
       background-color: #1AB6D3;
-      color: white;
     }
 
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -72,10 +71,8 @@
 <div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <img src="images/wind.png" width="180">
+      <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
+      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 150px; left: -10px;">
     </div>
     <div class="col-sm-8 text-left">
       <h1>Next Breath</h1>
@@ -85,7 +82,9 @@
       <hr>
       <h3>About us</h3>
       <p>A non-profit organization that is dedicated to providing statistical data on air quality around the nation, providing
-      info for all 50 countries, We want nothing more than to provide the nation with clean air information</p>
+      info for all 50 States. We want nothing more than to provide the nation with clean air information. It is through this site
+      that one can look back through the years to view updates to your chosen state's air quality.</p>
+
     </div>
 
     <div class="col-sm-2 sidenav">
