--- a/PyCharm/FinalProject1/Map.html
+++ b/PyCharm/FinalProject1/Map.html
@@ -13,7 +13,7 @@
       margin-bottom: 0;
       border-radius: 0;
       background-color: #1AB6D3;
-      color: white;
+      color: #fff;
     }
 
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -23,7 +23,7 @@
     .sidenav {
       padding-top: 20px;
       background-color: #B4B0B6;
-      height: 100%;
+      height: 380%;
     }
 
     /* Set black background color, white text and some padding */
@@ -63,7 +63,7 @@
         <li><a href="doYourPart.html">Do your Part</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+
       </ul>
     </div>
   </div>
@@ -73,28 +73,24 @@
 <div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <img src="images/wind.png" width="180">
+      <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
+      <img src="images/wave.png" style="width: 800px; height: 700px; position: absolute; top: 1010px; left: -10px;">
     </div>
     <div class="col-sm-8 text-left">
       <h1>MAP</h1>
-      <p>OUr Map</p>
+      <p>The map below shows the United States of America, Please select a desired state to view information regarding
+        the air quality of the state</p>
       <hr>
       <h3>How is My State Doing?</h3>
       <p>Below is a graph that shows the average Air Quality Index by state. This graph sorts the states by the lower AQI. Here, you can see where your states lands compared to others.</p>
-      <iframe src="http://localhost:63342/FinalProject1/Graphs/graphs/stateAQI.html?_ijt=mk5jn9q4bebj4a78n0b5uhd1q4" width="700" height="700" align="center;"></iframe>
-      <iframe src="https://createaclickablemap.com/map.php?&id=107410&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe>
+      <iframe src="http://localhost:63342/FinalProject1/Graphs/graphs/stateAQI.html?_ijt=mk5jn9q4bebj4a78n0b5uhd1q4" width="950" height="700" ></iframe>
+      <iframe src="https://createaclickablemap.com/map.php?&id=107410&maplocation=false&online=true" width="1000" height="725" style="border: none;"></iframe>
       <script>if (window.addEventListener){ window.addEventListener("message", function(event) { if(event.data.length >= 22) { if( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } else if (window.attachEvent){ window.attachEvent("message", function(event) { if( event.data.length >= 22) { if ( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } </script>
         </div>
 
     <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>ADS</p>
-      </div>
-      <div class="well">
-        <p>ADS</p>
+        <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
+        <img src="images/wave.png" style="width: 800px; height: 700px; position: absolute; top: 1010px; left: -50px;">
       </div>
     </div>
   </div>
