Changed map location
moved the map to a different section

--- a/PyCharm/FinalProject1/healthRisks.html
+++ b/PyCharm/FinalProject1/healthRisks.html
@@ -81,6 +81,7 @@
       <h3>Why Should I Care About Air Quality?</h3>
       <p>Air quality is important because bad air quality could lead to a irrattation of the eyes, nose and throat and
       might even cause a shortness of breath</p>
+      <iframe src="http://localhost:63342/FinalProject1/Graphs/graphs/stateAQI.html?_ijt=mk5jn9q4bebj4a78n0b5uhd1q4" width="950" height="700" ></iframe>
     </div>
 
     <div class="col-sm-2 sidenav">
