--- a/PyCharm/FinalProject1/Map.html
+++ b/PyCharm/FinalProject1/Map.html
@@ -23,7 +23,7 @@
     .sidenav {
       padding-top: 20px;
       background-color: #B4B0B6;
-      height: 380%;
+      height: 220%;
     }
 
     /* Set black background color, white text and some padding */
@@ -74,7 +74,7 @@
   <div class="row content">
     <div class="col-sm-2 sidenav">
       <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
-      <img src="images/wave.png" style="width: 800px; height: 700px; position: absolute; top: 1010px; left: -10px;">
+      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 690px; left: -10px;">
     </div>
     <div class="col-sm-8 text-left">
       <h1>MAP</h1>
@@ -83,13 +83,13 @@
       <hr>
       <h3>How is My State Doing?</h3>
       <p>Below is a graph that shows the average Air Quality Index by state. This graph sorts the states by the lower AQI. Here, you can see where your states lands compared to others.</p>
-      <iframe src="https://createaclickablemap.com/map.php?&id=107410&maplocation=false&online=true" width="1000" height="725" style="border: none;"></iframe>
+      <iframe src="/FinalProject1/Graphs/StateAqiMap.html"style="width: 800px; height: 700px; position: absolute; top: 230px; left: 100px;"></iframe>
+      <iframe src="/FinalProject1/Graphs/index.html"style="width: 800px; height: 700px; position: absolute; top: 1000px; left: 100px;"></iframe>
       <script>if (window.addEventListener){ window.addEventListener("message", function(event) { if(event.data.length >= 22) { if( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } else if (window.attachEvent){ window.attachEvent("message", function(event) { if( event.data.length >= 22) { if ( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } </script>
         </div>
 
     <div class="col-sm-2 sidenav">
-        <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
-        <img src="images/wave.png" style="width: 800px; height: 700px; position: absolute; top: 1010px; left: -50px;">
+         <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
       </div>
     </div>
   </div>
