added some more aesthetics
made the site look better

--- a/PyCharm/FinalProject1/Map.html
+++ b/PyCharm/FinalProject1/Map.html
@@ -23,7 +23,7 @@
     .sidenav {
       padding-top: 20px;
       background-color: #B4B0B6;
-      height: 220%;
+      height: 400%;
     }
 
     /* Set black background color, white text and some padding */
@@ -74,12 +74,12 @@
   <div class="row content">
     <div class="col-sm-2 sidenav">
       <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
-      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 690px; left: -10px;">
+      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 1500px; left: -10px;">
     </div>
     <div class="col-sm-8 text-left">
-      <h1>MAP</h1>
+      <h1>Map</h1>
       <p>The map below shows the United States of America, Please select a desired state to view information regarding
-        the air quality of the state</p>
+        the air quality of the state. Another map is also featured below that is made with refrence to population and county.</p>
       <hr>
       <h3>How is My State Doing?</h3>
       <p>Below is a graph that shows the average Air Quality Index by state. This graph sorts the states by the lower AQI. Here, you can see where your states lands compared to others.</p>
