--- a/PyCharm/FinalProject1/doYourPart.html
+++ b/PyCharm/FinalProject1/doYourPart.html
@@ -79,16 +79,22 @@
       <h1>Doing Your Part</h1>
       <hr>
       <h3>What Can I Do To Help Preserve Air Quality?</h3>
-      <p>Go help....</p>
+      <p>Follow these Tips Every Day to Reduce Pollution:
+        <br>Conserve energy - at home, at work, everywhere.
+        <br>Look for the ENERGY STAR label when buying home or office equipment.
+        <br>Carpool, use public transportation, bike, or walk whenever possible.
+        <br>Follow gasoline refueling instructions for efficient vapor recovery, being careful not to spill fuel and always tightening your gas cap securely.
+        <br>Consider purchasing portable gasoline containers labeled “spill-proof,” where available.
+        <br>Keep car, boat, and other engines properly tuned.
+        <br>Be sure your tires are properly inflated.
+        <br>Use environmentally safe paints and cleaning products whenever possible.
+        <br>Mulch or compost leaves and yard waste.
+        <br>Consider using gas logs instead of wood.</p>
+        <img src="images/plant.gif" style="width: 250px; height: 200px; position: absolute; top: 250px; left: 750px;">
     </div>
 
     <div class="col-sm-2 sidenav">
-      <div class="well">
-      <img src="/images/ad.gif"width="200">
-      </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
+       <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
     </div>
   </div>
 </div>
