--- a/PyCharm/FinalProject1/healthRisks.html
+++ b/PyCharm/FinalProject1/healthRisks.html
@@ -80,17 +80,13 @@
       <hr>
       <h3>Why Should I Care About Air Quality?</h3>
       <p>Air quality is important because bad air quality could lead to a irrattation of the eyes, nose and throat and
-      might even cause a shortness of breath</p>
+      might even cause a shortness of breath. The graph below is a repersentation of the AQI levels through all the states. The higher the AQI levels are, the more particles and unknown
+      substance one inhales.</p>
       <iframe src="http://localhost:63342/FinalProject1/Graphs/graphs/stateAQI.html?_ijt=mk5jn9q4bebj4a78n0b5uhd1q4" width="950" height="700" ></iframe>
     </div>
 
     <div class="col-sm-2 sidenav">
-      <div class="well">
-      <img src="/images/ad.gif"width="200">
-      </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
+      <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
     </div>
   </div>
 </div>
