Fix Loading Map and Index
Changed path to correct loading path and index html files.

--- a/PyCharm/FinalProject1/Map.html
+++ b/PyCharm/FinalProject1/Map.html
@@ -83,8 +83,8 @@
       <hr>
       <h3>How is My State Doing?</h3>
       <p>Below is a graph that shows the average Air Quality Index by state. This graph sorts the states by the lower AQI. Here, you can see where your states lands compared to others.</p>
-      <iframe src="/FinalProject1/Graphs/StateAqiMap.html"style="width: 800px; height: 700px; position: absolute; top: 230px; left: 100px;"></iframe>
-      <iframe src="/FinalProject1/Graphs/index.html"style="width: 800px; height: 700px; position: absolute; top: 1000px; left: 100px;"></iframe>
+      <iframe src="Graphs/StateAqiMap.html"style="width: 800px; height: 700px; position: absolute; top: 230px; left: 100px;"></iframe>
+      <iframe src="Graphs/index.html"style="width: 800px; height: 700px; position: absolute; top: 1000px; left: 100px;"></iframe>
       <script>if (window.addEventListener){ window.addEventListener("message", function(event) { if(event.data.length >= 22) { if( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } else if (window.attachEvent){ window.attachEvent("message", function(event) { if( event.data.length >= 22) { if ( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } </script>
         </div>
 
