url link for stataAqi fixed
url link for stataAqi fixed

--- a/PyCharm/FinalProject1/healthRisks.html
+++ b/PyCharm/FinalProject1/healthRisks.html
@@ -82,7 +82,7 @@
       <p>Air quality is important because bad air quality could lead to a irrattation of the eyes, nose and throat and
       might even cause a shortness of breath. The graph below is a repersentation of the AQI levels through all the states. The higher the AQI levels are, the more particles and unknown
       substance one inhales.</p>
-      <iframe src="http://localhost:63342/FinalProject1/Graphs/graphs/stateAQI.html?_ijt=mk5jn9q4bebj4a78n0b5uhd1q4" width="950" height="700" ></iframe>
+      <iframe src="Graphs/graphs/stateAQI.html" width="950" height="700" ></iframe>
     </div>
 
     <div class="col-sm-2 sidenav">
