added aesthetic changes
new thingies

--- a/PyCharm/FinalProject1/doYourPart.html
+++ b/PyCharm/FinalProject1/doYourPart.html
@@ -23,7 +23,7 @@
     .sidenav {
       padding-top: 20px;
       background-color: #B4B0B6;
-      height: 100%;
+      height: 300%;
 
     }
 
@@ -73,12 +73,21 @@
   <div class="row content">
     <div class="col-sm-2 sidenav">
       <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
-      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 150px; left: -10px;">
+      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 1050px; left: -10px;">
     </div>
     <div class="col-sm-8 text-left">
       <h1>Doing Your Part</h1>
       <hr>
       <h3>What Can I Do To Help Preserve Air Quality?</h3>
+      <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0gjnhBfvnZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
+      <div>
+        <h3>Number of good days in the United States of America</h3>
+        <iframe src="Graphs/graphs/USAPieChart.html" width="600" height="400" ></iframe>
+      </div>
+      <h3>Let's increase the number of good days!</h3>
       <p>Follow these Tips Every Day to Reduce Pollution:
         <br>Conserve energy - at home, at work, everywhere.
         <br>Look for the ENERGY STAR label when buying home or office equipment.
