--- a/PyCharm/FinalProject1/healthRisks.html
+++ b/PyCharm/FinalProject1/healthRisks.html
@@ -23,7 +23,7 @@
     .sidenav {
       padding-top: 20px;
       background-color: #B4B0B6;
-      height: 200%;
+      height: 280%;
 
     }
 
@@ -73,21 +73,26 @@
   <div class="row content">
     <div class="col-sm-2 sidenav">
       <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
-      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 600px; left: -10px;">
+      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 960px; left: -10px;">
     </div>
     <div class="col-sm-8 text-left">
       <h1>Health Risks</h1>
       <hr>
       <h3>Why Should I Care About Air Quality?</h3>
-      <p>Air quality is important because bad air quality could lead to a irrattation of the eyes, nose and throat and
-      might even cause a shortness of breath. The graph below is a repersentation of the AQI levels through all the states. The higher the AQI levels are, the more particles and unknown
-      substance one inhales.</p>
-      <iframe src="http://localhost:63342/FinalProject1/Graphs/graphs/stateAQI.html?_ijt=mk5jn9q4bebj4a78n0b5uhd1q4" width="950" height="700" ></iframe>
+      <iframe src="Graphs/graphs/yearlyAQI.html" width="950" height="700" ></iframe>
+      <div>
+      <p>
+         Currently, the United States of America is in the 0 – 50 range. This range is good and has little to no risk on the public. However, as shown, the United States of American was in the moderate zone for air quality up until 1989. While this did not influence most people, there were concerns to breathing air of this quality if the person has underlying respiratory issues. Additionally, infants and the elderly were advised to limit their time spent outside as long-lasting exposure could have negative affects on their wellbeing. Since then, the air quality has been improving and we should do everything in our power to keep this trend going as breathing is essential to everyone’s life.
+      </p>
+        <img src="images/badAirChart.png" style="width: 500px; height: 200px; position: absolute; top: 1000px; left: 250px;">
     </div>
+    </div>
+
 
     <div class="col-sm-2 sidenav">
       <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
     </div>
+
   </div>
 </div>
 
