--- a/PyCharm/FinalProject1/test1.html
+++ b/PyCharm/FinalProject1/test1.html
@@ -22,7 +22,7 @@
     .sidenav {
       padding-top: 20px;
       background-color: #B4B0B6;
-      height: 100%;
+      height: 150%;
 
     }
 
@@ -72,7 +72,7 @@
   <div class="row content">
     <div class="col-sm-2 sidenav">
       <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
-      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 150px; left: -10px;">
+      <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 378px; left: -10px;">
     </div>
     <div class="col-sm-8 text-left">
       <h1>Next Breath</h1>
@@ -80,10 +80,16 @@
       We know people only have the best in mind for their family, so Why not provide them with a place to live with clean air!
       Welcome to Next Breath!</p>
       <hr>
-      <h3>About us</h3>
+      <h3>
+        What is AQI?
+      </h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Tds3k97aAzo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       <h3>About us</h3>
       <p>A non-profit organization that is dedicated to providing statistical data on air quality around the nation, providing
       info for all 50 States. We want nothing more than to provide the nation with clean air information. It is through this site
-      that one can look back through the years to view updates to your chosen state's air quality.</p>
+      that one can look back through the years to view updates to your chosen state's air quality.
+      Whether you want to vacation, move or just care about the air you breath, our website provides helpful data on air quality.
+      </p>
 
     </div>
 
