--- a/PyCharm/FinalProject1/Map.html
+++ b/PyCharm/FinalProject1/Map.html
@@ -77,16 +77,20 @@
       <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 1500px; left: -10px;">
     </div>
     <div class="col-sm-8 text-left">
-      <h1>Map</h1>
+      <h1>Maps</h1>
       <p>The map below shows the United States of America, Please select a desired state to view information regarding
-        the air quality of the state. Another map is also featured below that is made with refrence to population and county.</p>
+        the air quality of the state. Another map is also featured below that is made with reference and county.</p>
       <hr>
       <h3>How is My State Doing?</h3>
       <p>Below is a graph that shows the average Air Quality Index by state. This graph sorts the states by the lower AQI. Here, you can see where your states lands compared to others.</p>
-      <iframe src="Graphs/StateAqiMap.html"style="width: 800px; height: 700px; position: absolute; top: 230px; left: 100px;"></iframe>
-      <iframe src="Graphs/index.html"style="width: 800px; height: 700px; position: absolute; top: 1000px; left: 100px;"></iframe>
-      <script>if (window.addEventListener){ window.addEventListener("message", function(event) { if(event.data.length >= 22) { if( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } else if (window.attachEvent){ window.attachEvent("message", function(event) { if( event.data.length >= 22) { if ( event.data.substr(0, 22) == "MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } </script>
-        </div>
+      <div>
+        <iframe src="Graphs/StateAqiMap.html"style="width: 800px; height: 700px; position: absolute; top: 230px; left: 100px;"></iframe>
+      </div>
+      <div>
+         <iframe src="Graphs/index.html"style="width: 800px; height: 700px; position: absolute; top: 1000px; left: 100px;"></iframe>
+      </div>
+
+    </div>
 
     <div class="col-sm-2 sidenav">
          <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
