Final Design changes
Final Design changes and edits

--- a/PyCharm/FinalProject1/doYourPart.html
+++ b/PyCharm/FinalProject1/doYourPart.html
@@ -54,7 +54,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Next Breath</a>
+      <a class="navbar-brand">Next Breath</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -75,31 +75,37 @@
       <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
       <img src="images/wind2.gif" style="width: 300px; height: 300px; position: absolute; top: 1050px; left: -10px;">
     </div>
+
     <div class="col-sm-8 text-left">
       <h1>Doing Your Part</h1>
       <hr>
-      <h3>What Can I Do To Help Preserve Air Quality?</h3>
-      <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/0gjnhBfvnZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      <div align = "center">
+        <h3>What Can I Do To Help Preserve Air Quality?</h3>
+        <iframe width="660" height="415" src="https://www.youtube.com/embed/0gjnhBfvnZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
+      <div align = "center">
+        <h3>Number of good days in the United States of America</h3>
+        <iframe src="Graphs/graphs/USAPieChart.html" width="660" height="415" ></iframe>
       </div>
 
       <div>
-        <h3>Number of good days in the United States of America</h3>
-        <iframe src="Graphs/graphs/USAPieChart.html" width="600" height="400" ></iframe>
-      </div>
-      <h3>Let's increase the number of good days!</h3>
-      <p>Follow these Tips Every Day to Reduce Pollution:
-        <br>Conserve energy - at home, at work, everywhere.
-        <br>Look for the ENERGY STAR label when buying home or office equipment.
-        <br>Carpool, use public transportation, bike, or walk whenever possible.
-        <br>Follow gasoline refueling instructions for efficient vapor recovery, being careful not to spill fuel and always tightening your gas cap securely.
-        <br>Consider purchasing portable gasoline containers labeled “spill-proof,” where available.
-        <br>Keep car, boat, and other engines properly tuned.
-        <br>Be sure your tires are properly inflated.
-        <br>Use environmentally safe paints and cleaning products whenever possible.
-        <br>Mulch or compost leaves and yard waste.
-        <br>Consider using gas logs instead of wood.</p>
-        <img src="images/plant.gif" style="width: 250px; height: 200px; position: absolute; top: 250px; left: 750px;">
+        <h3>Let's increase the number of good days!</h3>
+        <p>Tips to Reduce Air Pollution:
+          <br>Conserve energy - at home, at work, everywhere.
+          <br>Look for the ENERGY STAR label when buying home or office equipment.
+          <br>Carpool, use public transportation, bike, or walk whenever possible.
+          <br>Follow gasoline refueling instructions for efficient vapor recovery, being careful not to spill fuel and always tightening your gas cap securely.
+          <br>Consider purchasing portable gasoline containers labeled “spill-proof,” where available.
+          <br>Keep car, boat, and other engines properly tuned.
+          <br>Be sure your tires are properly inflated.
+          <br>Use environmentally safe paints and cleaning products whenever possible.
+          <br>Mulch or compost leaves and yard waste.
+          <br>Consider using gas logs instead of wood.</p>
+          <img src="images/plant.gif" style="width: 300px; height: 270px; position: absolute; top: 1050px; left: 920px;">
+        </div>
+
     </div>
 
     <div class="col-sm-2 sidenav">
@@ -109,7 +115,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Our Socials or something</p>
+  <p>Group 16: Next Breath - Final Project</p>
 </footer>
 
 </body>
