--- a/PyCharm/FinalProject1/test1.html
+++ b/PyCharm/FinalProject1/test1.html
@@ -53,7 +53,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Next Breath</a>
+      <a class="navbar-brand">Next Breath</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -77,7 +77,7 @@
     <div class="col-sm-8 text-left">
       <h1>Next Breath</h1>
       <p>We are a site dedicated to procuring statistical data on air levels around the United States. As Time moves forward
-      We know people only have the best in mind for their family, so Why not provide them with a place to live with clean air!
+      We know people only have the best in mind for their family, so why not provide them with a place to live with clean air!
       Welcome to Next Breath!</p>
       <hr>
       <h3>
@@ -85,8 +85,8 @@
       </h3>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/Tds3k97aAzo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        <h3>About us</h3>
-      <p>A non-profit organization that is dedicated to providing statistical data on air quality around the nation, providing
-      info for all 50 States. We want nothing more than to provide the nation with clean air information. It is through this site
+      <p>We are a non-profit organization that is dedicated to providing statistical data on air quality around the nation with
+      information on individual states. We want nothing more than to provide the nation with clean air information. It is through this site
       that one can look back through the years to view updates to your chosen state's air quality.
       Whether you want to vacation, move or just care about the air you breath, our website provides helpful data on air quality.
       </p>
@@ -105,7 +105,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Our Socials or something</p>
+  <p>Group 16: Next Breath - Final Project</p>
 </footer>
 
 </body>
