--- a/PyCharm/FinalProject1/Map.html
+++ b/PyCharm/FinalProject1/Map.html
@@ -53,7 +53,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Next Breath</a>
+      <a class="navbar-brand">Next Breath</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -100,7 +100,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Our Socials or something</p>
+  <p>Group 16: Next Breath - Final Project</p>
 </footer>
 
 </body>
