--- a/PyCharm/FinalProject1/healthRisks.html
+++ b/PyCharm/FinalProject1/healthRisks.html
@@ -54,7 +54,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Next Breath</a>
+      <a class="navbar-brand">Next Breath</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -79,21 +79,26 @@
       <h1>Health Risks</h1>
       <hr>
       <h3>Why Should I Care About Air Quality?</h3>
-<<<<<<< HEAD
+
+       <p>Air quality is important because bad air quality could lead to a irritation of the eyes, nose and throat and
+      might even cause a shortness of breath. The graph below is a representation of the AQI levels through all the states. The higher the AQI levels are, the more particles and unknown
+      substance one inhales.</p>
+
       <iframe src="Graphs/graphs/yearlyAQI.html" width="950" height="700" ></iframe>
       <div>
       <p>
-         Currently, the United States of America is in the 0 – 50 range. This range is good and has little to no risk on the public. However, as shown, the United States of American was in the moderate zone for air quality up until 1989. While this did not influence most people, there were concerns to breathing air of this quality if the person has underlying respiratory issues. Additionally, infants and the elderly were advised to limit their time spent outside as long-lasting exposure could have negative affects on their wellbeing. Since then, the air quality has been improving and we should do everything in our power to keep this trend going as breathing is essential to everyone’s life.
+         Currently, the United States of America is in the 0 – 50 range. This range is good and has little to no risk on the public.
+          However, as shown, the United States of American was in the moderate zone for air quality up until 1989. While
+          this did not influence most people, there were concerns to breathing air of this quality if the person has underlying
+          respiratory issues. Additionally, infants and the elderly were advised to limit their time spent outside as long-lasting
+          exposure could have negative affects on their wellbeing. Since then, the air quality has been improving and we should do
+          everything in our power to keep this trend going as breathing is essential to everyone’s life.
       </p>
-        <img src="images/badAirChart.png" style="width: 500px; height: 200px; position: absolute; top: 1000px; left: 250px;">
-=======
-      <p>Air quality is important because bad air quality could lead to a irrattation of the eyes, nose and throat and
-      might even cause a shortness of breath. The graph below is a repersentation of the AQI levels through all the states. The higher the AQI levels are, the more particles and unknown
-      substance one inhales.</p>
-      <iframe src="Graphs/graphs/stateAQI.html" width="950" height="700" ></iframe>
->>>>>>> 9d2eb6c6bdaef0e0a64a8224c95341e0b1caec80
-    </div>
-    </div>
+        <img src="images/badAirChart.png" style="width: 600px; height: 250px; position: absolute; top: 1000px; left: 280px;">
+
+
+
+    </div></div>
 
 
     <div class="col-sm-2 sidenav">
@@ -104,7 +109,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Our Socials or something</p>
+  <p>Group 16: Next Breath - Final Project</p>
 </footer>
 
 </body>
