--- a/PyCharm/FinalProject1/Map.html
+++ b/PyCharm/FinalProject1/Map.html
@@ -57,7 +57,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="test1.html">Home</a></li>
+        <li class="active"><a href="Home.html">Home</a></li>
         <li><a href="Map.html">Map</a></li>
         <li><a href="healthRisks.html">Health Risks</a></li>
         <li><a href="doYourPart.html">Do your Part</a></li>
