Changed Background color for text
Changed Background color for text

--- a/PyCharm/FinalProject1/Home.html
+++ b/PyCharm/FinalProject1/Home.html
@@ -12,7 +12,7 @@
     .navbar {
       margin-bottom: 0;
       border-radius: 0;
-      background-color: #1AB6D3;
+      background-color: #131FA3;
     }
 
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -25,6 +25,7 @@
       height: 150%;
 
     }
+
 
     /* Set black background color, white text and some padding */
     footer {
@@ -41,6 +42,9 @@
       }
       .row.content {height:auto;}
     }
+
+
+
   </style>
 </head>
 <body>
@@ -76,9 +80,12 @@
     </div>
     <div class="col-sm-8 text-left">
       <h1>Next Breath</h1>
-      <p>We are a site dedicated to procuring statistical data on air levels around the United States. As Time moves forward
-      We know people only have the best in mind for their family, so why not provide them with a place to live with clean air!
-      Welcome to Next Breath!</p>
+        <p>Next Breath is a site dedicated to procuring statistical data on air levels around the United States. Air Quality Index (AQI)
+          is the statistic used to describe the amount of particles in the air. In general, the higher the AQI means the more potential dangerous pollutants in the air.
+          With this in mind, our site gathers data and displays it into helpful graphs to inform the user about their area. With this knowledge,
+          we can start taking steps into preserving air quality! Welcome to Next Breath!
+        </p>
+
       <hr>
       <h3>
         What is AQI?
