--- a/PyCharm/FinalProject1/healthRisks.html
+++ b/PyCharm/FinalProject1/healthRisks.html
@@ -12,7 +12,7 @@
     .navbar {
       margin-bottom: 0;
       border-radius: 0;
-      background-color: #1AB6D3;
+      background-color: #131FA3;
       color: white;
     }
 
