--- a/PyCharm/FinalProject1/healthRisks.html
+++ b/PyCharm/FinalProject1/healthRisks.html
@@ -94,7 +94,7 @@
           exposure could have negative affects on their wellbeing. Since then, the air quality has been improving and we should do
           everything in our power to keep this trend going as breathing is essential to everyone’s life.
       </p>
-        <img src="images/badAirChart.png" style="width: 600px; height: 250px; position: absolute; top: 1000px; left: 280px;">
+        <img src="images/badAirChart2.png" style="width: 600px; height: 250px; position: absolute; top: 1000px; left: 280px;">
 
 
 
@@ -102,7 +102,7 @@
 
 
     <div class="col-sm-2 sidenav">
-      <img src="images/clouds3.gif" style="width: 500px; height: 200px; position: absolute; top: 10px; left: -25px;">
+      <img src="images/clouds3.gif" style="width: 700px; height: 400px; position: absolute; top: 10px; left: -25px;">
     </div>
 
   </div>
