Final Commit - added final text changes
Spelling errors/ additional information

--- a/PyCharm/FinalProject1/Map.html
+++ b/PyCharm/FinalProject1/Map.html
@@ -89,16 +89,16 @@
 
       <hr>
       <h3>How is My State Doing?</h3>
-      <p>Below are the maps that show the United States of America and there associated AQI of the region.
-        These graphs sort from lower AQI to higher AQI to provide and visualize the data given.</p>
+      <br>Below are the maps that show the United States of America and there associated AQI of the region.
+        These graphs sort from lower AQI to higher AQI to provide and visualize the data given. <br>To the right, is the map of AQI by state and the left is the map showing AQI by county using FIPS codes.</br></p>
 
 
       <div>
-        <iframe src="Graphs/StateAqiMap.html"style="width: 600px; height: 500px; position: absolute; top: 250px; left: 25px;"></iframe>
+        <iframe src="Graphs/StateAqiMap.html"style="width: 600px; height: 500px; position: absolute; top: 300px; left: 25px;"></iframe>
       </div>
 
       <div>
-         <iframe src="Graphs/index.html"style="width: 600px; height: 500px; position: absolute; top: 250px; left: 635px;"></iframe>
+         <iframe src="Graphs/index.html"style="width: 600px; height: 500px; position: absolute; top: 300px; left: 635px;"></iframe>
       </div>
 
     </div>
